# JPEGSawmill

./: .eslintrc.json  .gitignore  .gitmodules  .stylelintrc.json  .vnurc  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json  package.json
.github/scripts/: cmake.sh  ctest.sh  shellcheck.sh  validate.sh  vnu.sh  wasm.sh
.github/workflows/: ctest.yml  eslint.yml  pages-build.yml  shellcheck.yml  stylelint.yml  validate.yml  workflow_scan.yml
_site/: index.html  jpeg_sawmill.js  load_jpeg.js  manifest.json
_site/components/: file_drop_target.js  graduated_meter.js  progressive_jpeg.js  sawmill_about_box.js  sawmill_app.js  sawmill_brightness_slider.js  sawmill_file_drop_target.js  sawmill_meter.js  sawmill_play_button.js  sawmill_square_button.js  sawmill_toolbar.js  sawmill_ui.js  sawmill_viewer.js  sawmill_viewer_filter.js
_site/css/: jpeg_sawmill.css
_site/hooks/: element_state.js  targeted_zoom.js
cmake/: install-remap-wasmmap.cmake
src/: CMakeLists.txt  jpeg_inspector.cpp  jpeg_inspector.h
test/: CMakeLists.txt  test_jpeg_inspector.cpp
